Bug 336041 - Fails in parsing list-style shorthand css property
Summary: Fails in parsing list-style shorthand css property
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.13.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-10 13:01 UTC by Andrea Iacovitti
Modified: 2014-06-10 13:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments
list-style shorthand testcase (1.92 KB, text/html)
2014-06-10 13:01 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2014-06-10 13:01:17 UTC
Created attachment 87103 [details]
list-style shorthand testcase

Various fail in parsing css list-style property.
Attached a complete testcase posted in this discussion http://lists.w3.org/Archives/Public/www-style/2008Dec/0156.html
Mainly the "none value ambiguity" is not solved.
Comment 1 Andrea Iacovitti 2014-06-10 13:33:23 UTC
Git commit 142995d3754efc2d504d9e8d18e63ca108e2e617 by Andrea Iacovitti.
Committed on 10/06/2014 at 13:22.
Pushed by aiacovitti into branch 'KDE/4.13'.

Fix 'list-style' shorthand property parsing.
Use a dedicated function to able to solve the 'none' value ambiguity: 'none' is a
valid value for both 'list-style-type' and 'list-style-image' subproperties.
FIXED-IN: 4.13.3

M  +101  -3    khtml/css/cssparser.cpp
M  +1    -0    khtml/css/cssparser.h

http://commits.kde.org/kdelibs/142995d3754efc2d504d9e8d18e63ca108e2e617