Fix 'list-style' shorthand property parsing. Use a dedicated function to able to solve the 'none' value ambiguity: 'none' is a valid value for both 'list-style-type' and 'list-style-image' subproperties.

BUG: 336041
FIXED-IN: 4.13.3